# buywander-hunter

./: .djlintrc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  BETTER_AUTH_SETUP.md  DEVELOPMENT.md  Dockerfile  LINTING_SETUP.md  MIGRATION.md  Makefile  NEON_SETUP.md  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  USER_ACCOUNTS.md  app.py  asd.md  auth.py  buywander_deals.csv  buywander_deals_2026-01-29.csv  buywander_interests.csv  db.py  example.html  interests.json  loginexample.html  pa.python  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  response.md  run_scraper.sh  run_web.sh  scrape_history.json  (+4 more)
auth-server/: Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml
auth-server/src/: auth.ts  index.ts
backend/: .ruff.toml  Makefile  app.py  auth.py  auth_utils.py  database.py  db.py  init_db_simple.py  main.py  models.py  pyproject.toml  requirements.in  requirements.txt  requirements.txt.backup  run.sh  scraper.py  users.json
backend/alembic/: env.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  run.sh  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: style.css  types.ts
frontend/src/api/: axios.ts
frontend/src/lib/: auth-client.js  auth-client.ts
frontend/src/router/: index.js  index.ts
frontend/src/stores/: auth.js  auth.ts
frontend/src/views/: Dashboard.vue  Login.vue  PullDetail.vue  (+2 more)
templates/: history.html  index.html  login.html  pull_detail.html  settings.html  signup.html
